--- a/Eventos_Api/Eventos_Api/Views/Eventos/Delete.cshtml
+++ b/Eventos_Api/Eventos_Api/Views/Eventos/Delete.cshtml
@@ -29,6 +29,36 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.fecha)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.hora)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.hora)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Descripcion)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Descripcion)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Lugar)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Lugar)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Organizador)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Organizador)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.EsPublico)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.EsPublico)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
